force-app/main/default/objects/Reference_Image_Chunk__c/Reference_Image_Chunk__c.object-meta.xml
<CustomObject>
    <description>Transient staging rows holding base64 chunks of a guest-submitted reference image, keyed by Upload_Id__c. Written by the guest session, consumed and deleted by ReferenceImageReadyTrigger (which runs as the Automated Process user) once it reassembles them into a ContentVersion. Guest users cannot create Files directly - see CustomiseRequestController for details.</description>
    <label>Reference Image Chunk</label>
    <nameField>
        <displayFormat>RIC-{00000}</displayFormat>
        <label>Chunk Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Image Chunks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>