force-app/main/default/objects/Reference_Image_Chunk__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Reference Image Chunks</relationshipLabel>
    <relationshipName>Reference_Image_Chunks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>