force-app/main/default/objects/Reference_Image_Chunk__c/fields/Chunk_Data__c.field-meta.xml
<CustomField>
    <fullName>Chunk_Data__c</fullName>
    <label>Chunk Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>