force-app/main/default/objects/Reference_Image_Chunk__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <label>File Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>