force-app/main/default/objects/Reference_Image_Chunk__c/fields/Upload_Id__c.field-meta.xml
<CustomField>
    <fullName>Upload_Id__c</fullName>
    <label>Upload Id</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>